fix explore page on safari

--- a/frontend/src/css/ExplorePage.css
+++ b/frontend/src/css/ExplorePage.css
@@ -460,3 +460,9 @@ html[data-theme="dark"] .carousel-btn:focus-visible { outline: none; box-shadow:
   margin-left: auto;
   margin-right: auto;
 }
+
+@supports (-webkit-touch-callout: none) {
+    .recent-trips-section {
+        margin-bottom: 5.5rem;
+    }
+}
